<resources>
    <string name="app_name" translatable="false">Box Domotique</string>

    <string name="strLogo" translatable="false">Logo</string>
    <string name="strUser">User</string>
    <string name="strPassword">Password</string>
    <string name="strConnection">Connection</string>
    <string name="strServer">Server</string>
    <string name="strSaveLogin">Remember Me</string>
    <string name="strNull" translatable="false">NULL</string>
    <string name="strSuccessful">Connection successful !</string>
    <string name="strLoadingDialog">Please wait !</string>
    <string name="strTime">"Execution time : "</string>
    <string name="strChoice">Choose the devices you want to automate</string>
    <string name="strOK" translatable="false">OK</string>
    <string name="strOFF" translatable="false">OFF</string>
    <string name="strON" translatable="false">ON</string>
    <string name="strCancel">Cancel</string>
    <string name="strState">What state do you want to define in your scenario ?</string>
    <string name="strSensor">Manage the different connected devices.</string>
    <string name="strScenario">Create Scenarios, automate according to time, sunrise/sunset etc....</string>
    <string name="strAbout">About us !</string>
    <string name="strLibraries">Libraries</string>
    <string name="strDeleteScenario">Are you sure you want to delete this scenario ?</string>
    <string name="strTitleDeleteScenario">Delete this scenario ?</string>
    <string name="strYES">YES</string>
    <string name="strNO">NO</string>
    <string name="strTitleLogOut">Log Out</string>
    <string name="strLogOut">Would you like to log out ?</string>


    <string name="errorEnterServer">You have not entered an IP address !</string>
    <string name="errorUser">You have not entered a user !</string>
    <string name="errorPassword">You did not enter a password !</string>
    <string name="errorServer">Error on the server side !</string>
    <string name="errorUserPassword">Username and/or password is incorrect !</string>
    <string name="errorChoiceDevice">Error, at least one device must be selected from the list !</string>
    <string name="errorFloatingButton">Error, try to update the page before adding a scenario !</string>
    <string name="errorSingleDevice">Error, you must select only one device !</string>


    <string name="nav_dw_open" translatable="false">Open navigation drawer</string>
    <string name="nav_dw_close" translatable="false">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_sensor">Sensor management</string>
    <string name="nav_scenario">Scenario management</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Log out</string>

    <string name="tb_refresh">Refresh</string>

    <string name="emoji" translatable="false">emoji</string>

    <string name="btList">Device lists</string>
    <string name="strTitleExit">Exit ?</string>
    <string name="strExit">Do you want to leave the application ?</string>
</resources>
