<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sd_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/strNull"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/sd_rg"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_radiogroup"
            android:checkedButton="@id/sd_rbOFF"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sd_rbOFF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_radiobutton"
                android:button="@null"
                android:gravity="center"
                android:text="@string/strOFF"
                android:textColor="@color/colorText" />

            <RadioButton
                android:id="@+id/sd_rbON"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_radiobutton"
                android:button="@null"
                android:gravity="center"
                android:text="@string/strON"
                android:textColor="@color/colorText" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sd_bt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/strOK"
            app:backgroundTint="@color/colorPrimaryDark" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>